SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Applications__c.object
<CustomObject>
    <fields>
        <fullName>Application_Acronym__c</fullName>
        <label>Application Acronym</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_ADO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ADO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Acronym__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Acronym</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Applications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Acronym__c</columns>
        <columns>Primary_ADO__c</columns>
        <columns>Project_Acronym__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>